third_party/rust/cxx/v1/crate/tests/ui/vec_opaque.stderr
error: Rust Vec containing C++ type is not supported yet
  --> $DIR/vec_opaque.rs:15:19
   |
15 |         fn f() -> Vec<Job>;
   |                   ^^^^^^^^

error: needs a cxx::ExternType impl in order to be used as a vector element in Vec<Job>
  --> $DIR/vec_opaque.rs:11:9
   |
11 |         type Job;
   |         ^^^^^^^^

error[E0271]: type mismatch resolving `<handle::Job as ExternType>::Kind == Trivial`
   --> $DIR/vec_opaque.rs:22:9
    |
22  |         type Job = crate::handle::Job;
    |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected enum `Trivial`, found enum `cxx::kind::Opaque`
    |
note: required by a bound in `verify_extern_kind`
   --> $DIR/extern_type.rs:186:41
    |
186 | pub fn verify_extern_kind<T: ExternType<Kind = Kind>, Kind: self::Kind>() {}
    |                                         ^^^^^^^^^^^ required by this bound in `verify_extern_kind`
